# UU-INFOAFP2023-Fractals

./: CHANGELOG.md  Fractals.cabal  README.md  cabal.project
Accelerate/: Fractals.cabal  README.md  cabal.project
Accelerate/src/: ConsoleAcc.hs  ControllerAcc.hs  MainAcc.hs  ModelAcc.hs  ViewAcc.hs
Accelerate/test/: GeneratorAccTest.hs  Test.hs
Universal/: Fractals.cabal
Universal/src/: Console.hs  Controller.hs  Generator.hs  Main.hs  Model.hs  View.hs
Universal/test/: GeneratorTest.hs  Test.hs
src/: AccelerateLayer.hs  Console.hs  ConsoleAcc.hs  Controller.hs  ControllerAcc.hs  GenerateFractals.hs  Generator.hs  GeneratorAcc.hs  Main.hs  MainAcc.hs  Model.hs  ModelAcc.hs  View.hs  ViewAcc.hs  accelerate-test.hs
