cabal-version:      2.4
name:               Fractals
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Wessel Custers
                    Xiniang Lu
                    Jan Willem de Ruig
maintainer:         w.r.custers@students.uu.nl 
                    x.lu3@students.uu.nl
                    j.w.deruig@uu.nl

-- A copyright notice.
-- copyright:
category:           Game, Graphics
extra-source-files:
    CHANGELOG.md
    README.md

executable Fractals
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                 ,    gloss
                 ,    random
    hs-source-dirs:   src
    default-language: Haskell2010
