cabal-version:      2.4
name:               Fractals
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Wessel Custers 5993334
                    Xiniang Lu 0822760
                    Jan Willem de Ruig 6369502
maintainer:         w.r.custers@students.uu.nl 
                    x.lu3@students.uu.nl
                    j.w.deruig@uu.nl

-- A copyright notice.
-- copyright:
category:           Game, Graphics
extra-source-files:
    CHANGELOG.md
    README.md

executable Fractals
    main-is:          MainAcc.hs

    -- Modules included in this executable, other than Main.
    other-modules:    ControllerAcc
                 ,    ModelAcc
                 ,    ViewAcc
                 ,    GeneratorAcc
                 ,    ConsoleAcc

                 
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                 ,    gloss
                 ,    random
                 ,    split
                 ,    accelerate
                 ,    accelerate-llvm
                 ,    accelerate-llvm-native
                 ,    accelerate-llvm-ptx
                 ,    llvm-hs
                 ,    llvm-hs-pure
                 ,    libffi
    
    hs-source-dirs:   src
    
    default-language: Haskell2010

    ghc-options:      -threaded
                      -main-is MainAcc

library
    -- Modules included in this executable, other than Main.
    exposed-modules:    ControllerAcc
                   ,    ModelAcc
                   ,    ViewAcc
                   ,    GeneratorAcc
                   ,    ConsoleAcc

                 
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                 ,    gloss
                 ,    random
                 ,    split
                 ,    accelerate
                 ,    accelerate-llvm
                 ,    accelerate-llvm-native
                 ,    accelerate-llvm-ptx
                 ,    llvm-hs
                 ,    llvm-hs-pure
                 ,    libffi
    
    hs-source-dirs:   src
    
    default-language: Haskell2010

test-suite Fractals-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Test.hs
    build-depends:    base
                 ,    Fractals
                 ,    gloss
                 ,    random
                 ,    split
                 ,    accelerate
                 ,    accelerate-llvm
                 ,    accelerate-llvm-native
                 ,    accelerate-llvm-ptx
                 ,    llvm-hs
                 ,    llvm-hs-pure
                 ,    libffi
                 ,    tasty
                 ,    tasty-quickcheck
                 
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N8
